--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -1,9 +1,13 @@
 <html lang="en-US">
 
+    <head>
+        {{ partial "head.html" . }}
+    </head>
+
     <body>
 
         <div id="wrapper">
-            {{ partial "nav.html" . }}
+            {{ partial "header.html" . }}
             <p> hello </p>
             {{ partial "footer.html" . }}
         </div>
