--- a/themes/H3-Theme/layouts/_default/baseof.html
+++ b/themes/H3-Theme/layouts/_default/baseof.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
+    <head>
+        {{- partial "head.html" . -}}
+    </head>
     <body>
-        {{- partial "nav.html" . -}}
+        {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
         </div>
