--- a/themes/H3-Theme/layouts/partials/header.html
+++ b/themes/H3-Theme/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header id="header" class="alt">
     <span>
         <a href="{{ .Site.BaseURL }}" class="logo"> <img src="{{ .Site.Params.baseURL }}/img/H3 Logo.png" alt="" /></a>
-        <a href="#menu" id="menu">Menu</a>
+        <a id="menuBtn">Menu <i class="fas fa-bars"></i></a>
     </span>
 </header>
 
