--- a/themes/H3-Theme/layouts/_default/baseof.html
+++ b/themes/H3-Theme/layouts/_default/baseof.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
-<html>
+<html lang="en-US">
+
     <head>
-        {{- partial "head.html" . -}}
+        {{ partial "head.html" . }}
     </head>
+
     <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
+
+        <div id="wrapper">
+            {{ partial "header.html" . }}
+            <p> hello </p>
+            {{ partial "footer.html" . }}
         </div>
-        {{- partial "footer.html" . -}}
+
     </body>
+
+    <script>
+        {{ partial "main.js" . }}
+    </script>
 </html>
