--- a/themes/H3-Theme/layouts/partials/head.html
+++ b/themes/H3-Theme/layouts/partials/head.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" href="{{ "css/style.css" | absURL}}"/>
-<link rel="stylesheet" href="fontawesome.min.css" type="text/css">
-
-<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous"> -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+<!--<link rel="stylesheet" href="/css/fontawesome.min.css" type="text/css">-->
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
