Cleaned nav bar up

--- a/public/css/base/typography.css
+++ b/public/css/base/typography.css
@@ -1,1 +1,1 @@
-body,p,a{color:white;text-decoration:none;font-size:18pt;font-family:"Playfair Display"}*:hover{color:#d9d9d9}
+body,p,a{color:white;text-decoration:none;font-size:18pt;font-family:"Playfair Display"}*:hover,a:hover{color:#bfbfbf;cursor:pointer}
