--- a/themes/H3-Theme/static/css/base/page.css
+++ b/themes/H3-Theme/static/css/base/page.css
@@ -1,1 +1,1 @@
-body{margin:0;padding:0;background-color:#242943}
+body{margin:0;padding:0;background-color:#242943}div.content{padding:50}#page-title{text-align:center}
