--- a/themes/H3-Theme/static/css/base/typography.css
+++ b/themes/H3-Theme/static/css/base/typography.css
@@ -1,1 +1,1 @@
-body,p,a{color:white;text-decoration:none;font-size:18pt;font-family:"Playfair Display"}*:hover,a:hover{color:#bfbfbf;cursor:pointer}
+body,p,a{color:white;text-decoration:none;font-size:14pt;font-weight:500}*:hover,a:hover{color:#bfbfbf;cursor:pointer}
