--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -6,14 +6,26 @@
 
     <body>
 
-        <div id="wrapper">
-            {{ partial "header.html" . }}
+        {{ partial "header.html" . }}
+        <div id="home-content" class="content">
+            1<br>2<br>3<br>4<br>5<br>
             <p> hello </p>
-            {{ partial "footer.html" . }}
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
+            <br><br><br><br><br>
         </div>
+        {{ partial "footer.html" . }}
 
     </body>
 
     {{ partial "scripts.html" . }}
-    
+
 </html>
