--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,1 +1,3 @@
-<script src="js/main.js"></script>
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+
+<script src="../js/main.js"></script>
