--- a/themes/H3-Theme/static/scss/base/page.scss
+++ b/themes/H3-Theme/static/scss/base/page.scss
@@ -3,3 +3,14 @@ body {
     padding: 0;
     background-color: #242943;
 }
+
+div.content {
+    padding: 50;
+}
+
+#page-title {
+    text-align: center;
+}
+
+.blur {
+}
