--- a/themes/H3-Theme/static/scss/layout/_header.scss
+++ b/themes/H3-Theme/static/scss/layout/_header.scss
@@ -3,24 +3,49 @@
     padding: 0;
     background-color: #1a1a1a;
     height: 50px;
+    position: fixed;
+    width: 100%;
+    font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
 
     img {
         height: 30px;
         margin: 10px;
     }
 
-    #menuBtn {
-        float: right;
-        margin-right: 10px;
+    a {
+        margin-top: 15;
     }
+
+}
+
+#menuBtn{
+    float: right;
+    margin-right: 10px;
+}
+#menuClose {
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    font-size: 20pt;
 }
 
 nav#menu {
     visibility: hidden;
     position: fixed;
     width: 100%;
+    height: 100%;
+    background-color: rgba(26, 26, 26, 0.8);
     ul {
+        margin-top: 100;
+        font-family: ('Source Sans Pro', Helvetica, sans-serif);
+		text-transform: uppercase;
+        letter-spacing: 0.15em;
         text-align: center;
         list-style-type: none;
+    }
+    li {
+        margin: 50;
     }
 }
