--- a/public/css/base/typography.css
+++ b/public/css/base/typography.css
@@ -1,1 +1,1 @@
-body,p,a{color:white;text-decoration:none;font-size:18pt;font-family:"Playfair Display"}*:hover,a:hover{color:#bfbfbf;cursor:pointer}
+body,p,a,h1,h2{color:white;text-decoration:none;font-size:14pt;font-weight:500;font-family:"Source Sans Pro",Helvetica,sans-serif}h1{font-size:20pt;text-transform:uppercase;letter-spacing:0.15em}h2{font-size:14pt;text-transform:uppercase;letter-spacing:0.10em}*:hover,a:hover{color:#bfbfbf;cursor:pointer}
