--- a/public/scss/base/page.scss
+++ b/public/scss/base/page.scss
@@ -3,3 +3,21 @@ body {
     padding: 0;
     background-color: #242943;
 }
+
+div.content {
+    padding: 50;
+}
+
+#page-title {
+    text-align: center;
+}
+
+.blur {
+}
+
+.row {
+    display: flex;
+}
+.column {
+    flex: 50%;
+}
