--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -5,12 +5,18 @@
     height: 50px;
     position: fixed;
     width: 100%;
+    font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
 
     img {
         height: 30px;
         margin: 10px;
     }
 
+    a {
+        margin-top: 15;
+    }
 
 }
 
@@ -21,6 +27,8 @@
 #menuClose {
     float: right;
     margin-right: 10px;
+    margin-top: 10px;
+    font-size: 20pt;
 }
 
 nav#menu {
@@ -30,7 +38,14 @@ nav#menu {
     height: 100%;
     background-color: rgba(26, 26, 26, 0.8);
     ul {
+        margin-top: 100;
+        font-family: ('Source Sans Pro', Helvetica, sans-serif);
+		text-transform: uppercase;
+        letter-spacing: 0.15em;
         text-align: center;
         list-style-type: none;
+    }
+    li {
+        margin: 50;
     }
 }
