--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -5,5 +5,7 @@
 @import 'base/page';
 @import 'base/typography';
 
+@import 'components/icon';
+
 @import 'layout/header';
 @import 'layout/footer';
