--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -8,7 +8,8 @@
 
         {{ partial "header.html" . }}
         <div id="home-content" class="content">
-            1<br>2<br>3<br>4<br>5<br>
+            <img id="carousel" src="img/H3 Empty Office.png" alt="">
+            <br>1<br>2<br>3<br>4<br>5<br>
             <p> hello </p>
             <br><br><br><br><br>
             <br><br><br><br><br>
