--- a/themes/H3-Theme/layouts/_default/baseof.html
+++ b/themes/H3-Theme/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <body>
 
         {{ partial "header.html" . }}
-        <div id="base-content" class="content">
+        <div id="base-content" class="wrapper content">
 
             {{ block "main" . }}
 
