--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -7,11 +7,15 @@
     <body>
 
         {{ partial "header.html" . }}
-        <div id="home-content" class="content">
-            <img id="carousel" src="img/H3 Empty Office.png" alt="">
-            <br>1<br>2<br>3<br>4<br>5<br>
-            <p> hello </p>
-            <br><br><br><br><br>
+        <div id="home-content" class="wrapper">
+            <img id="carousel" src="img/H3 Office.png" alt="">
+            <p>Welcome to H3</p>
+            SerenDPT Mission<br>
+            Upcoming Events<br>
+            Blog<br>
+            Spaces<br>
+            Past Events<br>
+            <a href="https://serendpt.net/"><img id="sdpt" src="img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
             <br><br><br><br><br>
             <br><br><br><br><br>
             <br><br><br><br><br>
