--- a/public/scss/base/page.scss
+++ b/public/scss/base/page.scss
@@ -1,12 +1,18 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #242943;
+    background-color: #1a1a1a;
 }
 
-div.content {
+.wrapper {
+    background-color: #242943;
     padding-top: 50;
-    padding-bottom: 50;
+}
+
+.content {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
 
 #page-title {
@@ -34,9 +40,4 @@ input[type=text] {
     &:focus {
         background-color: #1a1a1a;
     }
-}
-
-#carousel {
-    width: 100%;
-    height: auto;
 }
