--- a/themes/H3-Theme/static/scss/base/typography.scss
+++ b/themes/H3-Theme/static/scss/base/typography.scss
@@ -1,9 +1,10 @@
 body, p, a, h1, h2 {
     color: white;
     text-decoration: none;
+    font-family: ('Source Sans Pro', Helvetica, sans-serif);
     font-size: 14pt;
     font-weight: 500;
-    font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    line-height: 1.2;
     //font-family: "Playfair Display";
 }
 h1 {
