--- a/public/scss/base/page.scss
+++ b/public/scss/base/page.scss
@@ -8,6 +8,9 @@ body {
     background-color: #242943;
     padding-top: 50;
 }
+.background-color {
+    background-color: #242943;
+}
 
 .content {
     padding-left: 20px;
