--- a/themes/H3-Theme/layouts/page/history.html
+++ b/themes/H3-Theme/layouts/page/history.html
@@ -1,85 +1,5 @@
-<html lang="en-US">
-
-    <head>
-        
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-
-<link rel="stylesheet" href="https://h3-sdpt.firebaseapp.com/css/style.css"/>
-<link href="https://h3-sdpt.firebaseapp.com/css/custom.css" rel="stylesheet">
-
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
-
-
-<link rel="shortcut icon" href="img/H3-Black-Logo.png" type="image/x-icon" />
-
-    </head>
-
-    <body>
-
-        
-
-<nav class="navbar fixed-top navbar-expand-lg">
-
-  <a href="https://h3-sdpt.firebaseapp.com/" class="logo"> <img src="/img/H3 Logo.png" alt="" /></a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
-    <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="https://h3-sdpt.firebaseapp.com/">Home <span class="sr-only">(current)</span></a>
-      
-          <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/history">History</a>
-      
-          <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/companies">Start-ups</a>
-      
-          <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a>
-      
-      
-          <a class="btn btn-outline-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
-      
-    </div>
-
-  </div>
-
-</nav>
-
-
-
-<nav id="menu">
-    <i id="menuClose" class="fas fa-times"></i>
-    <ul class="links">
-        <li><a href="https://h3-sdpt.firebaseapp.com/">Home</a></li>
-        
-            <li><a href="https://h3-sdpt.firebaseapp.com/history">History</a></li>
-        
-            <li><a href="https://h3-sdpt.firebaseapp.com/companies">Start-ups</a></li>
-        
-            <li><a href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a></li>
-        
-    </ul>
-    <ul class="actions vertical">
-        
-            <li><a href="https://h3-sdpt.firebaseapp.com/login" class="button special fit">Login</a></li>
-        
-        
-            <li><a href="https://h3-sdpt.firebaseapp.com/portal" class="button special fit">Portal</a></li>
-        
-    </ul>
-</nav>
-
-        <div id="base-content" class="wrapper content">
-
-            
-    <h1 id="page-title">History</h1>
+{{ define "main" }}
+    <h1 id="page-title">{{ .Title }}</h1>
     <div id="history">
 
         <img src="../../../img/history/Old H3.png" alt="" align="right">
@@ -106,21 +26,4 @@
 
         <p>SerenDPT needed a central facility in which they could house startup companies, so they presented a proposal for the previous Herion Accelerator, after the accelerator failed, to produce the desired economic development and Venice issued a Request for Proposals (RFP). SerenDPT was thus awarded the use of the ex-church and the management of the ‘deposito’ for 9 years. SerenDPT nicknamed the complex H3, to mark the third rebirth of the Herion complex, from garment factory to accelerator to startup factory. SerenDPT’s plan is to create and house startup companies in the former church. This is unlike traditional incubators, which typically host and mentor external startups from a variety of fields. SerenDPT aims to create at least 100 well-paid jobs before the expiration of the lease in 2027. Thus the former garment factory will be made a factory once again but producing startup companies, rather than textile products.</p>
     </div>
-
-
-        </div>
-        <div id="footer" class="alt">
-    <span>
-        <p>SerenDPT<br>Contact</p>
-    </span>
-</div>
-
-
-    </body>
-
-    <script src="../js/jquery.min.js" type="text/javascript"></script>
-
-<script src="../js/main.js" type="text/javascript"></script>
-
-
-</html>
+{{end}}
