--- a/themes/H3-Theme/layouts/page/test.html
+++ b/themes/H3-Theme/layouts/page/test.html
@@ -1,1 +1,7 @@
-herro world
+{{ define "main" }}
+    <h1 id="page-title">{{ .Title }}</h1>
+
+    Content:
+    <h2>{{ .Content }}</h2>
+    <p>{{ .Content }}</p>
+{{end}}
