--- a/themes/H3-Theme/static/scss/layout/_header.scss
+++ b/themes/H3-Theme/static/scss/layout/_header.scss
@@ -1,7 +1,17 @@
+.navbar {
+    height: 50px;
+    width: 100%;
+    background-color: rgba(26, 26, 26, 0.8); // 26 = #1a
+    img {
+        height: 30px;
+        margin: 10px;
+    }
+}
+
 #header {
     margin: 0;
     padding: 0;
-    background-color: #1a1a1a;
+    background-color: rgba(26, 26, 26, 0.8); // 26 = #1a
     height: 50px;
     position: fixed;
     width: 100%;
@@ -19,6 +29,37 @@
     }
 
 }
+
+#main-nav-div {
+    display: inline-block;
+    position: fixed;
+    margin-top: 15px;
+    margin-left: 300px;
+}
+.main-nav {
+    margin-top: 0;
+    padding-top: 0;
+    padding-left: 20;
+    padding-right: 20;
+}
+
+
+#loginBtn {
+    border-color: white;
+    background-color: white;
+    color: black;
+    font-size: 18;
+    padding-top: 1px;
+    padding-bottom: 0px;
+    height: 33px;
+    position: relative;
+    top: 3px;
+    &:hover{
+        background-color: transparent;
+        color: white;
+    }
+}
+
 
 #menuBtn{
     float: right;
