--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,14 +1,14 @@
-@import 'libs/vars';
-@import 'libs/functions';
-@import 'libs/bootstrap';
+@import 'libs/vars.scss';
+@import 'libs/functions.scss';
+@import 'libs/bootstrap.scss';
 
 
-@import 'base/page';
-@import 'base/typography';
+@import 'base/page.scss';
+@import 'base/typography.scss';
 
-@import 'components/icon';
+@import 'components/icon.scss';
 
-@import 'layout/header';
-@import 'layout/footer';
-@import 'layout/home';
-@import 'layout/companies';
+@import 'layout/header.scss';
+@import 'layout/footer.scss';
+@import 'layout/home.scss';
+@import 'layout/companies.scss';
