--- a/themes/H3-Theme/layouts/partials/footer.html
+++ b/themes/H3-Theme/layouts/partials/footer.html
@@ -1,5 +1,29 @@
 <div id="footer" class="alt">
-    <span>
-        <p>SerenDPT<br>Contact</p>
-    </span>
+
+    <div class="row">
+
+        <div class="col">
+            <h4>SerenDPT Srl</h4>
+            <h5>Società Benefit</h5>
+            <p>P.IVA: 04396950273</p>
+            <br>
+
+            <h5>SEDE LEGALE:</h5>
+            <p>San Marco, 1808<br>
+            30124 – Venezia</p>
+            <br>
+
+            <h5>SEDE OPERATIVA:</h5>
+            <p>Campo SS. Cosma e Damiano, 624-625<br>
+            Giudecca<br>
+            30133 – Venezia</p>
+        </div>
+        <div class="col">
+            <div class="sdpt right">
+                <a href="https://serendpt.net/"><img src="img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
+                <br>
+                <h5>Contact Us</h5>
+            </div>
+        </div>
+    </div>
 </div>
