footer, login, companies updates

--- a/themes/H3-Theme/layouts/partials/footer.html
+++ b/themes/H3-Theme/layouts/partials/footer.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col">
             <div class="sdpt right">
-                <a href="https://serendpt.net/"><img src="img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
+                <a href="https://serendpt.net/"><img src="{{ .Site.Params.baseURL }}/img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
                 <br>
                 <h5>Contact Us</h5>
             </div>
