--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -1,8 +1,24 @@
 #footer {
     margin: 0;
-    padding: 0;
+    padding: 40;
     background-color: #1a1a1a;
     height: 50px;
     width: 100%;
     font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    p {
+        font-size: 14;
+    }
+    h5 {
+        font-size: 18;
+    }
+    .right {
+        float: right;
+    }
+    .sdpt {
+        text-align: center;
+        img {
+            width: 200px;
+            height: auto;
+        }
+    }
 }
