--- a/themes/H3-Theme/layouts/page/history.html
+++ b/themes/H3-Theme/layouts/page/history.html
@@ -2,6 +2,12 @@
     <h1 id="page-title">{{ .Title }}</h1>
     <div id="history">
 
+        <div>
+            <a href="../art">Art</a><br>
+            <a href="../presentation">Presentation</a><br>
+            <a href="../documentary">Documentary</a>
+        </div>
+
         <img src="../../../img/history/Old H3.png" alt="" align="right">
 
         <h2>Convent of Saints Cosmas and Damian</h2>
@@ -25,5 +31,6 @@
         <p>Serenissima Development and Preservation through Technology, commonly known by its shorthand name “SerenDPT”, is a Venetian-based organization that develops innovative and socially responsible business models addressing problems within the city, ranging from preserving historic public art with the initiative PreserVenice to optimizing Venetian transportation with the daAaB app. Their mission is to create employment in the city of Venice and surrounding islands through innovative startups that assist in solving these local problems. They aspire to use their solutions to be exported to other cities around the world.</p>
 
         <p>SerenDPT needed a central facility in which they could house startup companies, so they presented a proposal for the previous Herion Accelerator, after the accelerator failed, to produce the desired economic development and Venice issued a Request for Proposals (RFP). SerenDPT was thus awarded the use of the ex-church and the management of the ‘deposito’ for 9 years. SerenDPT nicknamed the complex H3, to mark the third rebirth of the Herion complex, from garment factory to accelerator to startup factory. SerenDPT’s plan is to create and house startup companies in the former church. This is unlike traditional incubators, which typically host and mentor external startups from a variety of fields. SerenDPT aims to create at least 100 well-paid jobs before the expiration of the lease in 2027. Thus the former garment factory will be made a factory once again but producing startup companies, rather than textile products.</p>
+
     </div>
 {{end}}
