--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -12,4 +12,5 @@
 @import 'layout/footer.scss';
 @import 'layout/home.scss';
 @import 'layout/companies.scss';
+@import 'layout/spaces.scss';
 @import 'layout/login.scss';
