Added to home page

--- a/public/scss/layout/_home.scss
+++ b/public/scss/layout/_home.scss
@@ -1,4 +1,6 @@
-#sdpt {
-    width: 20%;
-    height: auto;
+#home-content {
+    p, h3 {
+        text-align: center;
+        color: green;
+    }
 }
