--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -38,16 +38,18 @@
             </div>
 
 
-            <p>Welcome to H3</p>
-            SerenDPT Mission<br>
+            <br><br><br><br><br>
+            <h3>Welcome to H3</h3>
+            <br><br><br><br><br>
+            <h4>SerenDPT Mission</h4>
+            <img src="img/SerenDPT.png" alt="">
             Upcoming Events<br>
+            <br><br><br><br><br>
             Blog<br>
-            Spaces<br>
+            <br><br><br><br><br>
             Past Events<br>
             <br><br><br><br><br>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
+            Spaces<br>
             <br><br><br><br><br>
         </div>
         {{ partial "footer.html" . }}
