Organized history page

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
 @import 'layout/home.scss';
+@import 'layout/history.scss';
 @import 'layout/companies.scss';
 @import 'layout/spaces.scss';
 @import 'layout/login.scss';
