--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -11,6 +11,8 @@
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
 @import 'layout/home.scss';
+@import 'layout/history.scss';
+@import 'layout/presentation.scss';
 @import 'layout/companies.scss';
 @import 'layout/spaces.scss';
 @import 'layout/login.scss';
