--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -7,11 +7,14 @@
 @import 'base/typography.scss';
 
 @import 'components/icon.scss';
+@import 'components/textbox.scss';
+@import 'components/button.scss';
 
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
 @import 'layout/home.scss';
 @import 'layout/history.scss';
+@import 'layout/presentation.scss';
 @import 'layout/companies.scss';
 @import 'layout/spaces.scss';
 @import 'layout/login.scss';
