--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -7,6 +7,8 @@
 @import 'base/typography.scss';
 
 @import 'components/icon.scss';
+@import 'components/textbox.scss';
+@import 'components/button.scss';
 
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
