--- a/themes/H3-Theme/layouts/page/gallery.html
+++ b/themes/H3-Theme/layouts/page/gallery.html
@@ -4,23 +4,29 @@
 
     <div id="carousel" class="carousel slide" data-ride="carousel">
 
-      <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-        <li data-target="#carousel" data-slide-to="2"></li>
-      </ol>
+        <ol class="carousel-indicators">
+            {{ range $index, $element := .Site.Params.Art.Picture }}
+                {{ if eq $index 0 }}
+                    <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
+                {{ else }}
+                    <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
+                {{ end }}
+            {{ end }}
+        </ol>
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="/img/art/Christ throws out the merchants.jpg"  alt="First slide">
+        <div class="carousel-inner">
+            {{ range $index, $element := .Site.Params.Art.Picture }}
+                {{ if eq $index 0 }}
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
+                    </div>
+                {{ else }}
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
+                    </div>
+                {{ end }}
+            {{ end }}
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="/img/art/Christ throws out the merchants.jpg"  alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="/img/art/Christ throws out the merchants.jpg" alt="Third slide">
-        </div>
-      </div>
 
       <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
