Added homepage video

--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -41,6 +41,8 @@
             <br><br><br><br><br>
             <h3>Welcome to H3</h3>
             <br><br><br><br><br>
+            <iframe width="1140" height="500" src="https://www.youtube.com/embed/cPL_98TpjUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br><br><br><br><br>
             <h4>SerenDPT Mission</h4>
             <img src="img/SerenDPT.png" alt="">
             Upcoming Events<br>
