--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -11,22 +11,45 @@
 
 
             <div id="carousel" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/H3 Office.png"  alt="First slide">
+
+                <ol class="carousel-indicators">
+                    {{ range $index, $element := .Site.Params.Home.carousel }}
+                        {{ if eq $index 0 }}
+                            <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
+                        {{ else }}
+                            <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
+                        {{ end }}
+                    {{ end }}
+                </ol>
+
+                <div class="carousel-inner">
+                    {{ range $index, $element := .Site.Params.Home.carousel }}
+                      {{ if eq $index 0 }}
+                          <div class="carousel-item active">
+                              <img class="d-block w-100" src="/img/{{ .image }}"  alt="">
+                              <div class="carousel-card">
+                                  <h3>{{ .title }}</h3>
+                                  <p>{{ .description }}</p>
+                                  {{ if not (eq .buttontext "")}}
+                                    <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
+                                  {{ end }}
+                              </div>
+                          </div>
+                      {{ else }}
+                          <div class="carousel-item">
+                              <img class="d-block w-100" src="/img/{{ .image }}"  alt="">
+                              <div class="carousel-card">
+                                  <h3>{{ .title }}</h3>
+                                  <p>{{ .description }}</p>
+                                  {{ if not (eq .buttontext "")}}
+                                    <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
+                                  {{ end }}
+                              </div>
+                          </div>
+                      {{ end }}
+                    {{ end }}
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/H3 Office.png"  alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/H3 Office.png" alt="Third slide">
-                </div>
-              </div>
+
               <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -35,13 +58,14 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
+
             </div>
 
 
             <br><br><br><br><br>
             <h3>Welcome to H3</h3>
             <br><br><br><br><br>
-            <iframe width="1140" height="500" src="https://www.youtube.com/embed/cPL_98TpjUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="90%" height="90%" src="https://www.youtube.com/embed/cPL_98TpjUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br><br><br><br><br>
             <h4>SerenDPT Mission</h4>
             <img src="img/SerenDPT.png" alt="">
