Added images to home carousel

--- a/themes/H3-Theme/static/scss/components/button.scss
+++ b/themes/H3-Theme/static/scss/components/button.scss
@@ -8,6 +8,8 @@
     height: 33px;
     position: relative;
     top: 3px;
+    //box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
+
     &:hover{
         background-color: transparent;
         color: white;
