--- a/public/css/layout/home.css
+++ b/public/css/layout/home.css
@@ -1,1 +1,1 @@
-#home-content{text-align:center}.carousel-card{position:absolute;width:30%;height:60%;top:50%;left:30%;transform:translate(-50%, -50%);padding:30px;background-color:rgba(46,46,46,0.9);border-radius:5px}
+#home-content{text-align:center}.carousel-card{position:absolute;width:30%;height:60%;top:50%;left:30%;transform:translate(-50%, -50%);padding:30px;background-color:rgba(46,46,46,0.9);border-radius:5px;box-shadow:3px 3px 1px rgba(0,0,0,0.7)}
