--- a/public/scss/layout/home.scss
+++ b/public/scss/layout/home.scss
@@ -12,4 +12,5 @@
     padding: 30px;
     background-color: rgba(46, 46, 46, 0.9);
     border-radius: 5px;
+    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.7);
 }
