--- a/themes/H3-Theme/static/scss/layout/home.scss
+++ b/themes/H3-Theme/static/scss/layout/home.scss
@@ -1,5 +1,10 @@
 #home-content {
     text-align: center;
+
+    #carousel {
+        height: 90%;
+        overflow: hidden;
+    }
 }
 
 .carousel-card {
