--- a/public/scss/base/page.scss
+++ b/public/scss/base/page.scss
@@ -6,7 +6,7 @@ body {
 
 .wrapper {
     background-color: #242943;
-    padding-top: 50;
+    //padding-top: 50;
 }
 .background-color {
     background-color: #242943;
@@ -20,7 +20,10 @@ body {
 
 #page-title {
     text-align: center;
-    margin-top: 30px;
+    font-size: 36pt;
+    color: white;
+    text-transform: capitalize;
+    font-weight: 500;
 }
 
 .blur {
@@ -52,4 +55,24 @@ ul {
 
 .no-space {
     padding: 0px;
+}
+
+
+#page-banner {
+    height: 40%;
+    overflow: hidden;
+
+    #page-title {
+        position: absolute;
+        width: 30%;
+        height: 60%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    #page-image {
+        width: 100%;
+        height: auto;
+        filter: brightness(50%);
+    }
 }
