--- a/themes/H3-Theme/layouts/page/companies.html
+++ b/themes/H3-Theme/layouts/page/companies.html
@@ -1,7 +1,10 @@
 {{ define "main" }}
-    <h1 id="page-title">{{ .Title }}</h1>
+    <div id="page-banner">
+        <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
+        <h1 id="page-title">{{ .Title }}</h1>
+    </div>
 
-    <div class="row company-pane">
+    <div class="row company-pane content">
 
         {{ range .Site.Params.companies }}
             <div class="col-sm company-col">
