--- a/themes/H3-Theme/layouts/page/gallery.html
+++ b/themes/H3-Theme/layouts/page/gallery.html
@@ -1,42 +1,47 @@
 {{ define "main" }}
-    <h1 id="page-title">{{ .Title }}</h1>
-    {{ .Content }}
+    <div class="pad-top">
+        <h1 class="title">{{ .Title }}</h1>
+        <div>
+            {{ .Content }}
 
-    <div id="carousel" class="carousel slide" data-ride="carousel">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
 
-        <ol class="carousel-indicators">
-            {{ range $index, $element := .Site.Params.Art.Picture }}
-                {{ if eq $index 0 }}
-                    <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
-                {{ else }}
-                    <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
-                {{ end }}
-            {{ end }}
-        </ol>
+                <ol class="carousel-indicators">
+                    {{ range $index, $element := .Site.Params.Art.Picture }}
+                        {{ if eq $index 0 }}
+                            <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
+                        {{ else }}
+                            <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
+                        {{ end }}
+                    {{ end }}
+                </ol>
 
-        <div class="carousel-inner">
-            {{ range $index, $element := .Site.Params.Art.Picture }}
-                {{ if eq $index 0 }}
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
-                    </div>
-                {{ else }}
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
-                    </div>
-                {{ end }}
-            {{ end }}
+                <div class="carousel-inner">
+                    {{ range $index, $element := .Site.Params.Art.Picture }}
+                        {{ if eq $index 0 }}
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
+                            </div>
+                        {{ else }}
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="/img/art/{{ .filename }}"  alt="">
+                            </div>
+                        {{ end }}
+                    {{ end }}
+                </div>
+
+              <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+
+            </div>
         </div>
-
-      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
     </div>
+
 
 {{end}}
