--- a/themes/H3-Theme/layouts/page/login.html
+++ b/themes/H3-Theme/layouts/page/login.html
@@ -1,12 +1,14 @@
 {{ define "main" }}
-    <h1 id="page-title">{{ .Title }}</h1>
-    <div id="login-pane">
-        Username:
-        <input type="text">
-        <br>
-        Password:
-        <input type="text">
-        <br>
-        <input class="btn btn-outline-light my-2 my-sm-0" type="submit" role="button">
+    <div class="pad-top">
+        <h1 class="title">{{ .Title }}</h1>
+        <div id="login-pane" class="content">
+            Username:
+            <input type="text">
+            <br>
+            Password:
+            <input type="text">
+            <br>
+            <input class="btn btn-outline-light my-2 my-sm-0" type="submit" role="button">
+        </div>
     </div>
 {{end}}
