--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -1,4 +1,8 @@
 {{ define "main" }}
-    <h1 id="page-title">{{ .Title }}</h1>
-    {{ .Content }}
+    <div class="pad-top">
+        <h1 class="title">{{ .Title }}</h1>
+        <div class="content">
+            {{ .Content }}
+        </div>
+    </div>
 {{end}}
