--- a/themes/H3-Theme/static/css/layout/history.css
+++ b/themes/H3-Theme/static/css/layout/history.css
@@ -1,1 +1,1 @@
-#history{margin:30px}#history p{font-size:14pt;line-height:1.4}#history h2{font-size:18pt}#history h3{font-size:16pt}#history img{padding:20px}#history #links{text-align:center}#history #links a{font-size:14pt;line-height:1.5}
+#history{margin:30px}#history p{font-size:14pt;line-height:1.4}#history h2{font-size:18pt}#history h3{font-size:16pt}#history img{padding:20px}#history #links{text-align:center}#history #links a{font-size:14pt;line-height:1.5}#history .image-preview{border-radius:50%;height:250px;width:250px}
