--- a/themes/H3-Theme/static/css/layout/login.css
+++ b/themes/H3-Theme/static/css/layout/login.css
@@ -1,1 +1,1 @@
-#login-pane{text-align:center;padding:20px}#container{margin:55vh 0;padding:50px;outline:1px dashed orange}#block{padding:10px;border:1px solid black;font-family:Helvetica}
+#login-pane{text-align:center;padding:20px}
