--- a/themes/H3-Theme/static/scss/libs/_vars.scss
+++ b/themes/H3-Theme/static/scss/libs/_vars.scss
@@ -8,18 +8,12 @@ $font: (
 );
 
 $palette: (
-	bg:					#242943,
-	bg-alt:				#2a2f4a,
-	fg:					#ffffff,
-	fg-bold:			#ffffff,
-	fg-light:			rgba(244,244,255,0.2),
-	border:				rgba(212,212,255,0.1),
-	border-bg:			rgba(212,212,255,0.035),
-	highlight:			#9bf1ff,
-	accent1:			#6fc3df,
-	accent2:			#8d82c4,
-	accent3:			#ec8d81,
-	accent4:			#e7b788,
-	accent5:			#8ea9e8,
-	accent6:			#87c5a4
+	bg:					#ECF0F1,
+	bg-alt:				#BDC3C7,
+	fg:					#2C3E50,
+	fg-alt:				#3498DB,
+	border:				#2C3E50,
+	border-bg:			#2C3E50,
+	highlight:			#FFCC00,
+	accent1:			#FFCC00
 );
