--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -10,18 +10,6 @@
         <div id="home-content" class="background-color">
 
 
-            <!-- SerenDPT Video -->
-            <div data-vc-full-width="true" data-vc-full-width-init="true" data-vc-parallax-image="https://www.youtube.com/watch?v=cPL_98TpjUk" data-vc-video-bg="https://www.youtube.com/watch?v=cPL_98TpjUk" class="vc_row wpb_row vc_row-fluid vc_custom_1530607431919 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-flex vc_video-bg-container" style="position: relative; left: -54px; box-sizing: border-box; width: 1278px; padding-left: 54px; padding-right: 54px; min-height: 69.5122vh;">
-                <div class="no-pointer">
-                    <iframe class="no-pointer" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1" id="widget2" style="max-width: 1000%; margin-left: 0px; margin-top: -131px; width: 1278px; height: 718.875px;"></iframe>
-                </div>
-
-            </div>
-
-
-
-<br><br><br><br><br>
-
             <div id="carousel" class="carousel slide" data-ride="carousel">
 
                 <ol class="carousel-indicators">
@@ -38,19 +26,27 @@
                     {{ range $index, $element := .Site.Params.carousel }}
                       {{ if eq $index 0 }}
                           <div class="carousel-item active">
-                              <img class="d-block w-100" src="/img/{{ .image }}"  alt="">
-                              <div class="carousel-card">
+                              <img class="d-block tester3" src="/img/{{ .image }}"  alt="">
+                              <div class="carousel-text">
                                   <h3>{{ .title }}</h3>
+                                  <br>
                                   <p>{{ .description }}</p>
                                   {{ if not (eq .buttontext "")}}
                                     <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
                                   {{ end }}
                               </div>
+                              <!--<div class="carousel-card">
+                                  <h3>{{ .title }}</h3>
+                                  <p>{{ .description }}</p>
+                                  {{ if not (eq .buttontext "")}}
+                                    <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
+                                  {{ end }}
+                              </div>-->
                           </div>
                       {{ else }}
                           <div class="carousel-item">
-                              <img class="d-block w-100" src="/img/{{ .image }}"  alt="">
-                              <div class="carousel-card">
+                              <img class="d-block tester3" src="/img/{{ .image }}"  alt="">
+                              <div class="carousel-text">
                                   <h3>{{ .title }}</h3>
                                   <p>{{ .description }}</p>
                                   {{ if not (eq .buttontext "")}}
@@ -74,33 +70,62 @@
             </div>
 
 
-            <br><br><br><br><br>
-            <h3>Welcome to H3</h3>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
-            <h4>SerenDPT Mission</h4>
-            <img src="img/SerenDPT.png" alt="">
-            Upcoming Events<br>
-            <br><br><br><br><br>
-            Blog<br>
-            <br><br><br><br><br>
-            Past Events<br>
-            <br><br><br><br><br>
-            Spaces<br>
-            <br><br><br><br><br>
+            <div class="pane">
+                Welcome to H3
+            </div>
 
+            <img class="section z1 rel" src="img/SerenDPT.png" alt="">
 
+            <div class="section z1 rel">
+                <h2 id="page-title">Events</h2>
 
-            
-            <br><br><br><br><br>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
+                <span class="fade-container">
+                    <img class="fade-image" src="img/factlet 1.png" alt="">
 
-            <div id="container">
-                <div id="block">
-                    Hi there !
+                        <img class="fade-image" src="img/factlet 2.png" alt="">
+
+                        <img class="fade-image" src="img/factlet 3.png" alt="">
+                </span>
+
+            </div>
+
+            <div class="section z1 rel">
+                Upcoming Events
+
+                <div class="fade-container row">
+                    <div class="fade-card col">
+                        Event 1
+                    </div>
+                    <div class="fade-card col">
+                        Event 2
+                    </div>
+                    <div class="fade-card col">
+                        Event 3
+                    </div>
                 </div>
             </div>
+            <br><br><br><br><br>
+            Space
+            <br><br><br><br><br>
+            <div class="section z1 rel">
+                Blog
+            </div>
+
+            <div class="section z1 rel">
+                Spaces
+            </div>
+
+
+            <div class="section z1 rel">
+                <!-- SerenDPT Video -->
+                <div data-vc-full-width="true" data-vc-full-width-init="true" data-vc-parallax-image="https://www.youtube.com/watch?v=cPL_98TpjUk" data-vc-video-bg="https://www.youtube.com/watch?v=cPL_98TpjUk" class="vc_row wpb_row vc_row-fluid vc_custom_1530607431919 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-flex vc_video-bg-container" style="position: relative; left: -54px; box-sizing: border-box; width: 1278px; padding-left: 54px; padding-right: 54px; min-height: 69.5122vh;">
+                    <div class="no-pointer">
+                        <iframe class="no-pointer" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1" id="widget2" style="max-width: 1000%; margin-left: 0px; margin-top: -131px; width: 1278px; height: 718.875px;"></iframe>
+                    </div>
+                </div>
+            </div>
+
+
 
         </div>
         {{ partial "footer.html" . }}
