--- a/themes/H3-Theme/static/scss/layout/_header.scss
+++ b/themes/H3-Theme/static/scss/layout/_header.scss
@@ -11,7 +11,7 @@
 #header {
     margin: 0;
     padding: 0;
-    background-color: rgba(26, 26, 26, 0.8); // 26 = #1a
+    background-color: rgba(26, 26, 26, 0.8);
     height: 50px;
     position: fixed;
     width: 100%;
@@ -41,23 +41,6 @@
     padding-top: 0;
     padding-left: 20;
     padding-right: 20;
-}
-
-
-#loginBtn {
-    border-color: white;
-    background-color: white;
-    color: black;
-    font-size: 18;
-    padding-top: 1px;
-    padding-bottom: 0px;
-    height: 33px;
-    position: relative;
-    top: 3px;
-    &:hover{
-        background-color: transparent;
-        color: white;
-    }
 }
 
 
