--- a/themes/H3-Theme/static/scss/layout/history.scss
+++ b/themes/H3-Theme/static/scss/layout/history.scss
@@ -12,9 +12,6 @@
     h3 {
         font-size: 16pt;
     }
-    img {
-        padding: 20px;
-    }
     #links {
         text-align: center;
         a {
@@ -29,4 +26,55 @@
         width: 250px;
     }
 
+}
+
+.square-cell {
+    overflow: hidden;
+}
+.square-image {
+}
+.slide {
+    min-height: 100vh;
+    background-color: orange;
+}
+
+.title-cell {
+    grid-area: title;
+    background-color: green;
+    text-align: center;
+    font-size: 22pt;
+}
+.text-cell {
+    grid-area: text;
+    background-color: blue;
+    padding: 20px;
+    font-size: 18pt;
+}
+.pic1-cell {
+    grid-area: pic1;
+    background-color: yellow;
+}
+.pic2-cell {
+    grid-area: pic2;
+    background-color: red;
+}
+.pic3-cell {
+    grid-area: pic3;
+    background-color: yellow;
+}
+.pic4-cell {
+    grid-area: pic4;
+    background-color: red;
+}
+
+.history-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: auto; //repeat(5, 1fr)
+    grid-template-areas:
+        ". . title title title . ."
+        "pic1 pic1 text text text pic2 pic2"
+        "pic1 pic1 text text text pic2 pic2"
+        "pic3 pic3 text text text pic4 pic4"
+        "pic3 pic3 text text text pic4 pic4"
 }
